--- a/emacs.d/thomasf-emacs.org
+++ b/emacs.d/thomasf-emacs.org
@@ -1,7 +1,19 @@
-#+title: Thomas Frössmans gnu emacs configuration
+#+TITLE: Thomas Frössmans gnu emacs configuration
+#+AUTHOR: Thomas Frössman
+#+EMAIL: thomasf@jossystem.se
 #+TAGS: issue(i)
 #+TODO: TODO DONE
+#+LANGUAGE: en
+#+PROPERTY: exports code
+#+PROPERTY: no-expand
+#+OPTIONS: toc:2 num:nil ^:nil
+#+OPTIONS:   H:3 num:t toc:t \n:nil @:t ::t |:t ^:t -:t f:t *:t TeX:t LaTeX:nil skip:nil d:t tags:not-in-toc
+#+INFOJS_OPT: view:showall toc:t ltoc:t mouse:underline buttons:0 sdepth:2 path:../org-res/org-info.js
+#+STYLE:    <link rel="stylesheet" type="text/css" href="../org-res/style.css" />
+#+STARTUP:indent
+#+STARTUP:hidestars
 
+* Introduction
 This is very very much a work in progress..
 I'm both quite new to org mode and have just
 recently started merging all my config files
@@ -53,7 +65,6 @@ Stuff that only should load when a window system is available.
 
 (provide 'thomasf-gui)
 #+end_src
-
 * Bootstrap
 ** Turn off unwanted UI elements at once
 To avoid momentary display
@@ -415,7 +426,7 @@ Somethings to be inspired by?
 #+begin_src emacs-lisp :tangle no
  (setq mac-option-modifier nil
        mac-command-modifier 'meta
-      x-select-enable-clipboard t
+      x-select-enable-clipboard t)
 
 ;; Trim whitespace before save)
  (add-hook 'before-save-hook 'delete-trailing-whitespace)
